[package]
name = "b10"

version = "0.2.0"
edition = "2021"

description = "Lossless handling of decimal numbers at maximum performance."
license = "CC0-1.0"

readme = "README.md"
homepage = "https://github.com/pascaldekloe/b10"
repository = "https://github.com/pascaldekloe/b10"

[dependencies]

[workspace]
members = ["fuzz/*"]
