[package]
name = "b10"

version = "1.0.0"
edition = "2021"

description = "Lossless handling of decimal numbers at maximum performance."
license = "CC0-1.0"

readme = "README.md"
homepage = "https://github.com/pascaldekloe/b10"
repository = "https://github.com/pascaldekloe/b10"

[features]
default = []
redundant_generics = []

[dependencies]

[workspace]
members = ["fuzz/*"]
